= Release notes

:sectnums!:

include::user-manual:release-notes/2025.1.0.adoc[leveloffset=+1]
include::user-manual:release-notes/2024.11.0.adoc[leveloffset=+1]
include::user-manual:release-notes/2024.9.0.adoc[leveloffset=+1]
include::user-manual:release-notes/2024.7.0.adoc[leveloffset=+1]
include::user-manual:release-notes/2024.5.0.adoc[leveloffset=+1]
include::user-manual:release-notes/2024.3.0.adoc[leveloffset=+1]
include::user-manual:release-notes/2024.1.0.adoc[leveloffset=+1]
include::user-manual:release-notes/2023.12.0.adoc[leveloffset=+1]