@@ -1,6 +1,6 @@
 site:
   title: SysON Docs
-  start_page: v2024.11.0@syson::index.adoc
+  start_page: v2025.1.0@syson::index.adoc
 
 output:
   clean: true
