@@ -9,7 +9,7 @@ services:
     networks:
       - syson
   app:
-    image: "${IMAGE_TAG:-eclipsesyson/syson:v2025.1.0}"
+    image: "${IMAGE_TAG:-eclipsesyson/syson:latest}"
     ports:
       - "8080:8080"
     environment:
